# m-dulo-rust

./: .env.exemple  .gitignore  Cargo.toml  README.md  build.rs  cert.pem  config.json  docker-compose.yml  install.sh  m-dulo.service  remov.sh
db/: banco.sqlite
docs/: README.md
src/: config.rs  db.rs  lib.rs  main.rs  proxy.rs  proxy_server.rs
src/models/: delete.rs  delete_global.rs  edit.rs  user.rs
src/routes/: criar.rs  editar.rs  excluir.rs  excluir_global.rs  mod.rs  online.rs  online_monitor.rs  sincronizar.rs
src/utils/: backup_utils.rs  email.rs  grpcurl_installer.rs  logging.rs  online_utils.rs  postgres_installer.rs  restart_v2ray.rs  restart_xray.rs  user_utils.rs
src/ws_handler/: cloudflared.rs  handler.rs  mod.rs
teste/user_tracker/src/: main.rs
