[package]
name = "m-dulo-rust"
version = "0.1.0"
edition = "2021"
authors = ["Jefferson Hipolito de Oliveira <suporte@webhostpro.com.br>"]
description = "O m-dulo-rust é um projeto em Rust que utiliza o framework web Axum para criar uma aplicação web assíncrona e de alto desempenho. Ele aproveita o Tokio para execução assíncrona, Serde para serialização/desserialização de dados em JSON, e um banco de dados SQLite via SQLx para persistência. A aplicação também utiliza UUIDs para geração de identifica"
license = "MIT"
repository = "https://github.com/sshturbo/m-dulo-rust"
readme = "README.md"


[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["v4"] }
rand = "0.8"
chrono = "0.4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
zbus = "2.0"
thiserror = "1.0"

sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros"
] }
