[package]
name = "m-dulo"
version = "0.1.0"
edition = "2021"
authors = ["Jefferson Hipolito de Oliveira <suporte@webhostpro.com.br>"]
description = "O módulo é um projeto em Rust que utiliza o framework web Axum para criar uma aplicação web assíncrona e de alto desempenho. Ele aproveita o Tokio para execução assíncrona, Serde para serialização/desserialização de dados em JSON e um banco de dados SQLite via SQLx para persistência. A aplicação também utiliza UUIDs para geração de identificadores únicos."
license = "MIT"
repository = "https://github.com/sshturbo/m-dulo-rust"
readme = "README.md"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }

# Banco de dados
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid"] }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilitários
uuid = { version = "1.5", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
lazy_static = "1.4.0"
once_cell = "1.21.3"

# Futures (async)
futures = { version = "0.3", features = ["std", "async-await"] }
futures-util = { version = "0.3", features = ["std", "async-await", "sink"] }

# Additional dependencies
which = "4.4"

url = "2"

redis = { version = "0.24", features = ["tokio-comp"] }

tokio-postgres = "0.7"

tonic = "0.11"
prost = "0.12"

dashmap = "5"
tokio-tungstenite = "0.20"
nix = { version = "0.30.0", features = ["socket"] }
httparse = "1.10.1"
hyper = "1.6.0"
tokio-util = "0.7.15"
bytes = "1.10.1"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
